# aFunlang

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  version-info
cmake/: CFEP.cmake  FindFFlags.cmake  InstallDir.cmake  WindowsInstall.cmake  aFunHeader.cmake  aFunlangConfig.cmake.in  deps-install.cmake  deps.cmake  deps_install.cmake  directory.cmake  export-head.cmake  filename.cmake  info.cmake  tool.cmake
cmake/CMakeFindExternalProject/: CMakeFindExternalProject.cmake  CMakeLists.txt.in  InstallDir.cmake  LICENSE  WindowsInstall.cmake  _void_p_test.c  init.cmake
include/: aFun.h  aFun.hpp  arg.h  base.h.in  bytecode.h  cjson.h  code.h  env.h  error_macro.h  fflags.h  func.h  gc.h  lexical_warning_error.h  macro.h  magic_func.h  main.h  main.hpp  mem.h  obj_api.h  object.h  parser.h  prefix_macro.h  reader.h  regex.h  run.h  token.h  tool.h  var.h
include/code/: aFuncode.h  code-logger.h  code-logger.inline.h  code.h  code.inline.h  code_logger.h  code_logger.inline.h
include/core/: README  aFunCore.h  aFunCore.hpp  aFuncore.h  activation.h  activation.hpp  activation.inline.h  activation.template.h  activity.hpp  bytecode.h  bytecode.hpp  code.h  code.hpp  code.inline.h  core-activation.h  core-activation.inline.h  core-activation.template.h  core-exception.h  core-exception.inline.h  core-init.h  core-init.inline.h  core-logger.h  core-logger.inline.h  core-message-stream.h  core-message-stream.template.h  core-message.h  core-parser.h  core-parser.inline.h  core.h  core.hpp  core_activation.h  core_env_var.h  core_env_var.inline.h  core_environment.h  core_environment.inline.h  core_exception.h  core_exception.inline.h  core_init.h  core_init.hpp  core_inter.h  (+64 more)
include/dlfcn/: dlfcn.h
include/interface/: aFunit.h  func-exit.h  func-exit.inline.h  func-import.h  func-import.inline.h  init.h  init.inline.h  it-exception.h  it-exception.inline.h  it-init.h  it-init.inline.h  it-inter.h  it-reader.h  it-reader.inline.h  it_exception.h  it_exception.inline.h  it_reader.h  it_reader.inline.h
include/parser/: aFunparser.h  parser-logger.h  parser-logger.inline.h  parser-parser.h  parser-parser.inline.h  parser-reader.h  parser-reader.inline.h  parser_logger.h  parser_logger.inline.h  parser_reader.h  parser_reader.inline.h  parser_syntax.h  parser_syntax.inline.h
include/runtime/: aFun_tool.h  aFunlang.h  aFunlang.hpp  aFunrt.h  func-exit.h  func-exit.inline.h  func-import.h  func-import.inline.h  (+53 more)
lang/: hgt.cmake  hgt.py
src/: CMakeLists.txt  __fflags.h  __main.h  __main_run.h  help-info  help_info.c.in  main-build.cpp  main-cl.cpp  main-help.cpp  main-run.cpp  main-tool.cpp  main.c  main.cpp  main_build.c  main_build.cpp  main_build.h  main_build.hpp  main_run.c  main_run.cpp  main_run.h  main_run.hpp  main_signal.c  main_signal.h
src/cjson/: CMakeLists.txt  cJSON.c  tool.c
src/code/: CMakeLists.txt  code-logger.cpp  code.cpp  logger.cpp
src/core/: CMakeLists.txt  __arg.c  __arg.h  __bytecode.h  __code.h  __code.hpp  __env.h  __env.hpp  __func.h  __func.hpp  __gc.h  __gc.hpp  __global_obj.c  __global_obj.h  __global_obj.hpp  __monitor.h  __monitor.hpp  __object.h  __object.hpp  __parser.h  __parser.hpp  __reader.h  __reader.hpp  __run.h  __run.hpp  __sig.h  __sig.hpp  __var.h  __var.hpp  activation.cpp  activity.cpp  bytecode.c  bytecode.cpp  bytecode.h  code.c  code.cpp  core-init.cpp  core-logger.cpp  core_init.c  core_init.cpp  (+42 more)
src/dlfcn/: CMakeLists.txt  dlfcn.c
src/interface/: CMakeLists.txt  func-exit.cpp  func-import.cpp  init.cpp  it-init.cpp  it-inter.cpp  it-reader.cpp  reader.cpp
src/memory/: CMakeLists.txt  mem.c
src/parser/: CMakeLists.txt  lexical.cpp  logger.cpp  parser-logger.cpp  reader.cpp  syntactic.cpp
src/regex/: __regex.h  config.h  regex.c
src/runtime/: CMakeLists.txt  __aFun_tool.h  __aFunlang.h  __aFunlang.hpp  __cycle_obj.h  __cycle_obj.hpp  __rt_tool.h  __runtime.h  __runtime.hpp  aFun_tool.c  aFunlang.c  aFunlang.cpp  activation.cpp  callback_var_object.cpp  cycle_obj.c  cycle_obj.cpp  error_message.cpp  exe_activation.cpp  func-exit.cpp  func-import.cpp  func_activation.cpp  func_object.cpp  logger.cpp  message.cpp  normal_activation.cpp  normal_message.cpp  object.cpp  rt-activation.cpp  rt-init.cpp  rt-inter.cpp  rt-logger.cpp  rt-message.cpp  rt-reader.cpp  runtime.c  runtime.cpp  runtime_tool.h  runtime_tool.hpp  top_activation.cpp  top_activation.h  var_object.cpp  (+1 more)
src/runtime/aFunTool/: base.c
src/runtime/aFunTool/base/: __base.h  base.c  quit.c  str_obj.c
src/runtime/base/: __base.h  __base.hpp  base.c  base.cpp  quit.c  quit.cpp  str_obj.c  str_obj.cpp
src/tool/: CMakeLists.txt  __md5.h  __regex.hpp  byte.c  byte.cpp  directory.cpp  dlc.c  dlc.cpp  encoding.cpp  exception.cpp  exit.cpp  exit_.c  exit_.cpp  file.c  file.cpp  hash.c  hash.cpp  log.c  log.cpp  logger.cpp  md5.c  md5.cpp  regex.c  regex.cpp  signal.c  stdio.cpp  stdio_.c  stdio_.cpp  string.c  string.cpp  time.c  time.cpp  tool-logger.cpp
test/: CMakeLists.txt  test_byte_code.c  test_dlc.c  test_env.c  test_lexcial.c  test_lib.c  test_mem.c  test_reader.c  test_regex.c  test_syntactic.c  test_test_lib.c
test/af/: test1.af  test1.aub  test1.aun  test2.aub
test/bytecode/: test1.aun
test/cmake/: CMakeLists.txt  README  function.cmake  generic.c  generic.cmake
test/export/: CMakeLists.txt  README  export.cmake  main.c
test/lib/: CMakeLists.txt  README  dlc-lib.cpp
test/share/: README  md5.txt
test/src/: CMakeLists.txt  README  byte_code.c  byte_code.cpp  code-create.cpp  code_create.cpp  core-code.cpp  core-down-msg.cpp  core-env-var.cpp  core-init.cpp  core-lexical.cpp  core-logger.cpp  core-reader.cpp  core-syntactic.cpp  core-up-msg.cpp  core_code.cpp  core_down_msg.cpp  core_env_var.cpp  core_up_msg.cpp  env_init.c  env_init.cpp  it-init.cpp  it-syntactic.cpp  it_init.cpp  it_syntactic.cpp  lexical.c  lexical.cpp  logger.c  logger.cpp  parser-lexical.cpp  parser-reader.cpp  parser_lexical.cpp  parser_reader.cpp  reader.c  reader.cpp  rt-syntactic.cpp  run-code.cpp  run_code.c  run_code.cpp  syntactic.c  (+25 more)
(+99 files in other folders)
