SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})  # 统一输出到bin目录
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

FUNCTION(ADD_aFunTest TEST_NAME TEST_SOURCE)
    ADD_EXECUTABLE(aFunTest_${TEST_NAME} ${TEST_SOURCE})
    TARGET_LINK_LIBRARIES(aFunTest_${TEST_NAME} af_tool af_json)
    ADD_TEST(NAME aFunTest_${TEST_NAME} COMMAND $<TARGET_FILE:aFunTest_${TEST_NAME}>)
ENDFUNCTION()

FUNCTION(SET_PASS TEST_NAME PASS_STR)
    SET_TESTS_PROPERTIES(aFunTest_${TEST_NAME} PROPERTIES PASS_REGULAR_EXPRESSION ${PASS_STR})
ENDFUNCTION()

FUNCTION(SET_LINK TEST_NAME LIB)
    TARGET_LINK_LIBRARIES(aFunTest_${TEST_NAME} ${LIB})
ENDFUNCTION()

ADD_LIBRARY(lib_Test1 test_lib.c)  # 测试程序需要使用的动态库
SET_TARGET_PROPERTIES(lib_Test1 PROPERTIES OUTPUT_NAME "Test1")

ADD_DEFINITIONS(-DLIB_TEST1="$<TARGET_FILE:lib_Test1>")  # 设置宏: lib的所在路径

ADD_aFunTest(mem test_mem.c)
ADD_aFunTest(lib test_test_lib.c)
ADD_aFunTest(dlc test_dlc.c)
ADD_aFunTest(byte test_byte.c)

SET_LINK(lib lib_Test1)  # 链接测试程序需要的动态库

SET_PASS(lib "num = 100 test = 110")
SET_PASS(dlc "a = 100, test = 110")